--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,59 +1,26 @@
 {
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "useUnknownInCatchVariables": true,
-    "noUncheckedIndexedAccess": true,
-    "allowUnreachableCode": false,
-    "noImplicitOverride": true,
-    "resolveJsonModule": true,
-    "noImplicitReturns": true,
-    "preserveSymlinks": false,
-    "strictNullChecks": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "declarationMap": true,
-    "noUnusedLocals": true,
-    "noImplicitAny": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "declaration": true,
-    "incremental": false,
-    "sourceMap": true,
-    "allowJs": false,
     "strict": true,
-    "noEmit": false,
-    "moduleResolution": "node",
-    "module": "CommonJS",
-    "target": "ES2022",
-    "baseUrl": "src",
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "jsx": "preserve",
-    "outDir": "lib",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "#manager": [
-        "index"
-      ]
-    },
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
